--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ django-paypal==2.0
 djangorestframework==3.13.1
 gunicorn==20.1.0
 idna==3.3
-psycopg2==2.9.3
+#psycopg2==2.9.3
 pytz==2022.1
 requests==2.27.1
 sqlparse==0.4.2
